# creatief-vakvrouw

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml
migrations/: 20230714215223_clients.sql  20230714215705_invoices.sql  20240210232000_pdf.sql  20240707203912_delete_invoice.sql
scripts/: verhuis_clients.py  verhuis_facturen.py
src/: anita.rs  cli.rs  db.rs  event.rs  factuur.rs  lib.rs  main.rs  server.rs
src/routes/: anita.rs  auth.rs  factuur.rs  mod.rs  report.rs
templates/: anita.html  base.html  btw.html  deleted.html  factuur.html  history.html  index.html  login.html
templates/invoice/: details.yml  template.tex
