[package]
name = "creatief-vakvrouw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["full"] }
