[package]
name = "creatief-vakvrouw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.2"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.12"
axum-extra = { version = "0.7.4", features = ["form"] }
axum-login = "0.6.0"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json", "trust-dns"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
